--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>HTML Redirect</title>
-	<meta http-equiv="refresh" content="5; url =
-	https://ide.geeksforgeeks.org" />
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.container {
+  position: relative;
+  text-align: center;
+  color: black;
+    display: block;
+    font-family: sans-serif;
+    font-size: xx-large;
+    font-weight: 900;
+    left: 20%;
+    z-index: 1030;
+}
 
+.centered {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+</style>
+</head>
 <body>
-	<h1 style="text-align:center;color:green;">
-	GeeksforGeeks
-</h1>
-	<p style="text-align:center;">
-		If your browser supports Refresh,
-		you'll be redirected to GeeksforGeeks
-		Homepage, in 5 seconds.
-	</p>
+
+<div class="container">
+  <img src="https://lh3.googleusercontent.com/proxy/RdHDIzXLldPAIDVCEWumB3z8DLkmHvfjMrJtVjpGcnnVhnrBbziyfInHgGrSmwBB_M9I9k3yUCK7Xsj9PItSjxO5Sn4X1BoloHTrZ-qFx-bMPjaMq68mT6u6WyQSy4-PPGXcH-wyot8gI0miCRU9NpA=s0-d" alt="Snow" style="width:100%;">
+  <div class="centered">TROLL BANK API</div>
+</div>
 
 </body>
-
-</html>
+</html> 
