--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
 </head>
 <body>
 
+<body>
+
 <div class="container">
-  <img src="https://lh3.googleusercontent.com/proxy/RdHDIzXLldPAIDVCEWumB3z8DLkmHvfjMrJtVjpGcnnVhnrBbziyfInHgGrSmwBB_M9I9k3yUCK7Xsj9PItSjxO5Sn4X1BoloHTrZ-qFx-bMPjaMq68mT6u6WyQSy4-PPGXcH-wyot8gI0miCRU9NpA=s0-d" alt="Snow" style="width:100%;">
+  <img src="https://lh3.googleusercontent.com/proxy/RdHDIzXLldPAIDVCEWumB3z8DLkmHvfjMrJtVjpGcnnVhnrBbziyfInHgGrSmwBB_M9I9k3yUCK7Xsj9PItSjxO5Sn4X1BoloHTrZ-qFx-bMPjaMq68mT6u6WyQSy4-PPGXcH-wyot8gI0miCRU9NpA=s0-d" alt="Snow" style="width: 42vw;">
   <div class="centered">TROLL BANK API</div>
 </div>
+
+
+ 
+</body>
 
 </body>
 </html> 
