--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.container {
-  position: relative;
-  text-align: center;
-  color: black;
-    display: block;
-    font-family: sans-serif;
-    font-size: xx-large;
-    font-weight: 900;
-    left: 20%;
-    z-index: 1030;
-}
 
-.centered {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
-}
-</style>
 </head>
 <body>
 
-<body>
+</body><body>
 
-<div class="container">
+<div class="container" style="position: relative;text-align: center;color: black;display: block;font-family: sans-serif;font-size: xx-large;font-weight: 900;left: 20%;z-index: 1030;">
   <img src="https://lh3.googleusercontent.com/proxy/RdHDIzXLldPAIDVCEWumB3z8DLkmHvfjMrJtVjpGcnnVhnrBbziyfInHgGrSmwBB_M9I9k3yUCK7Xsj9PItSjxO5Sn4X1BoloHTrZ-qFx-bMPjaMq68mT6u6WyQSy4-PPGXcH-wyot8gI0miCRU9NpA=s0-d" alt="Snow" style="width: 42vw;">
-  <div class="centered">TROLL BANK API</div>
+  <div class="centered" style="position: absolute;top: 10%;left: 50%;transform: translate(-50%, -50%);">TROLL BANK API</div>
 </div>
 
 
  
 </body>
 
-</body>
+
 </html> 
