--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="5;url=https://etrolls.in/" />
+<style>
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
 
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
 </head>
 <body>
 
-</body><body>
+
 
 <div class="container" style="position: relative;text-align: center;color: black;display: block;font-family: sans-serif;font-size: xx-large;font-weight: 900;left: 20%;z-index: 1030;">
   <img src="https://lh3.googleusercontent.com/proxy/RdHDIzXLldPAIDVCEWumB3z8DLkmHvfjMrJtVjpGcnnVhnrBbziyfInHgGrSmwBB_M9I9k3yUCK7Xsj9PItSjxO5Sn4X1BoloHTrZ-qFx-bMPjaMq68mT6u6WyQSy4-PPGXcH-wyot8gI0miCRU9NpA=s0-d" alt="Snow" style="width: 42vw;">
-  <div class="centered" style="position: absolute;top: 10%;left: 50%;transform: translate(-50%, -50%);">TROLL BANK API</div>
+  <div class="centered" style="position: absolute;top: 34%;left: 5%;transform: translate(-50%, -50%);">TROLL BANK API</div>
 </div>
-
-
- 
+<div class="loader" style="border: 16px solid #f3f3f3;border-radius: 50%;border-top: 16px solid #3498db;width: 120px;height: 120px;-webkit-animation: spin 2s linear infinite;animation: spin 2s linear infinite;/* top: 9%; */margin-top: -23vw;margin-left: 12vw;"></div>
+<p style="
+    margin-left: 17vw;
+    margin-top: -15vw;
+"> Redirecting to</p><p style="
+    margin-left: 19vw;
+    margin-top: 0vw;
+"><a href="https://etrolls.in">etrolls.in</a></p>
 </body>
-
-
-</html> 
+</html>
