--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 <div class="container" style="position: relative;text-align: center;color: black;display: block;font-family: sans-serif;font-size: xx-large;font-weight: 900;left: 20%;z-index: 1030;">
-  <img src="https://lh3.googleusercontent.com/proxy/RdHDIzXLldPAIDVCEWumB3z8DLkmHvfjMrJtVjpGcnnVhnrBbziyfInHgGrSmwBB_M9I9k3yUCK7Xsj9PItSjxO5Sn4X1BoloHTrZ-qFx-bMPjaMq68mT6u6WyQSy4-PPGXcH-wyot8gI0miCRU9NpA=s0-d" alt="Snow" style="width: 42vw;">
+  <img src="img/no-face-troll.png" alt="Snow" style="width: 42vw;">
   <div class="centered" style="position: absolute;top: 34%;left: 5%;transform: translate(-50%, -50%);">TROLL BANK API</div>
 </div>
 <div class="loader" style="border: 16px solid #f3f3f3;border-radius: 50%;border-top: 16px solid #3498db;width: 120px;height: 120px;-webkit-animation: spin 2s linear infinite;animation: spin 2s linear infinite;/* top: 9%; */margin-top: -26vw;margin-left: 20vw;"></div>
