--- a/index.html
+++ b/index.html
@@ -1,6 +1,42 @@
 <html><head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="refresh" content="5;url=https://etrolls.in/">
+    <!-- Primary Meta Tags -->
+  
+  <title>TROLL BANK — View, Download, Upload , Store Raw-Trolls bits</title>
+  
+  <meta name="title" content="TROLL BANK —  View, Download, Upload , Store Raw-Trolls bits">
+  
+  <meta name="description"
+    content="Troll Bank is created to support all our fellow trollers to roast the world - This Bank helps in Viewing, Downloading, Uploading , & Storing Raw-Trolls bits">
+
+  <!-- Open Graph / Facebook -->
+  
+  <meta property="og:type" content="website">
+  
+  <meta property="og:url" content="https://metatags.io/">
+  
+  <meta property="og:title" content="TROLL BANK —  View, Download, Upload , Store Raw-Trolls bits">
+  
+  <meta property="og:description"
+    content="Troll Bank is created to support all our fellow trollers to roast the world - This Bank helps in Viewing, Downloading, Uploading , & Storing Raw-Trolls bits">
+  
+    <meta property="og:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+  <!-- Twitter -->
+  
+  <meta property="twitter:card" content="summary_large_image">
+ 
+  <meta property="twitter:url" content="https://metatags.io/">
+  
+  <meta property="twitter:title" content="TROLL BANK —  View, Download, Upload , Store Raw-Trolls bits">
+  
+  <meta property="twitter:description"
+    content="Troll Bank is created to support all our fellow trollers to roast the world - This Bank helps in Viewing, Downloading, Uploading , & Storing Raw-Trolls bits">
+  
+    <meta property="twitter:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 <style>
 .loader {
   border: 16px solid #f3f3f3;
